More bugfix & update to Jekyll 3.5 standards

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ github_username:  jekyll
 # Build settings
 markdown: kramdown
 theme: classic-jekyll-theme
-gems:
+plugins_dir:
   - jekyll-feed
   - jekyll-data
 exclude:
