Changed useSeparateNavBanner to use-separate-navbanner

--- a/_data/setup.yml
+++ b/_data/setup.yml
@@ -59,7 +59,9 @@ navbanner-position: top
 #
 # Using a separate navbanner file will speed up jekyll compilation a lot. However it also means that the browser has to make two additional fetches: the navbanner file and the JQuery library (the later from google). However this is mitigated by the fact that both files can be cached by the browser.
 # If another JQuery library has to be used, edit the _includes/head.html file accordingly.
+#
+# Note: If this option is set to 'yes', then make sure the file 'navbanner.md' is present (can be found in the theme folder) in the same project folder as the index.md file.
 
-useSeparateNavBanner: yes
+use-separate-navbanner: yes
 
 # End of file
