require at least Jekyll v3.5.1
 - Jekyll 3.5.0 and beyond will automatically require a theme's runtime
   dependencies. So there's no need of specifying gem-only* plugins in
   the config file.

 - The new name for `gems` key is `plugins` not `plugins_dir`, which is
   used to configure local plugins directory ( default: `./_plugins` )

 - Jekyll 3.5.0 contained some bad bugs which was readily fixed in 3.5.1

 - Gemfile and Gemfile.lock is excluded by default from v3.5.0

---

*gem-only plugin refers to a plugin that is not required if a user forks
the theme's repo.

--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,5 @@ github_username:  jekyll
 # Build settings
 markdown: kramdown
 theme: classic-jekyll-theme
-plugins_dir:
+plugins:
   - jekyll-feed
-  - jekyll-data
-exclude:
-  - Gemfile
-  - Gemfile.lock
