--- a/_data/setup.yml
+++ b/_data/setup.yml
@@ -48,7 +48,7 @@ enable-cookies-policy: yes
 # Values: top | main
 # - top: The navigation banner will be placed above all the columns
 # - main: The navigation banner will be placed inside the main column at the top.
-# This is the default value, it may be overriden by YAML frontmatter.
+# This is the default value, it may be overridden by YAML frontmatter.
 #
 # Hint: It may be advantageous to set the $navbanner-include-banner value in the classic-jekyll-theme.scss to 'false' if this value here is set to 'true'.
 #
@@ -57,8 +57,8 @@ navbanner-position: top
 # Create a separate file containing the Navigation & Banner
 # Values: yes | no
 #
-# Using a separate navbanner file will speed up jekyll compilation a lot. However it also means that the browser has to make two additional fetches: the navbanner file and the JQuery library (the later from google). However this is mitigated by the fact that both files can be cached by the browser.
-# If another JQuery library has to be used, edit the _includes/head.html file accordingly.
+# Using a separate navbanner file will speed up jekyll compilation a lot. However it also means that the browser has to make two additional fetches: the navbanner file and the jQuery library (the latter from google). However this is mitigated by the fact that both files can be cached by the browser.
+# If another jQuery library has to be used, edit the _includes/head.html file accordingly.
 #
 # Note: If this option is set to 'yes', then make sure the file 'navbanner.md' is present (can be found in the theme folder) in the same project folder as the index.md file.
 
