Added older-posts.html widget

--- a/_data/text-for.yml
+++ b/_data/text-for.yml
@@ -38,3 +38,10 @@ tCookieOk: OK
 
 # More cookie info text
 tMoreInfo: More info
+
+# Title for Older Posts widget output
+tOlderPosts: Older Posts
+
+# Month names for Older Posts widget output
+# Note: Must start with 'None' because of index starting at 0
+tMonths: [None, January, February, March, April, May, June, July, August, September, October, November, December]
