--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
-keep_files: [assets]
+keep_files: [assets, icons]
 theme: classic-jekyll-theme
 plugins:
   - jekyll-feed
