--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ github_username:  jekyll
 # Build settings
 markdown: kramdown
 keep_files: [assets, icons]
+exclude: [README.md]
 theme: classic-jekyll-theme
 plugins:
   - jekyll-feed
