--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Classic Jekyll Theme
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   All you ever needed in a theme...
-baseurl: "" # the subpath of your site, e.g. /blog note that it must _also_ be defined in classic-jekyll-theme.scss!
+baseurl: "/classic-jekyll-theme" # the subpath of your site, e.g. /blog note that it must _also_ be defined in classic-jekyll-theme.scss!
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
